[gd_scene load_steps=14 format=2]

[ext_resource path="res://scripts/interface/general/dialog_container.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/PressStart2P.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/interactable/npcs/portrait_marujo.png" type="Texture" id=3]
[ext_resource path="res://assets/interface/intentory/item_background/type_1.png" type="Texture" id=4]
[ext_resource path="res://assets/interface/dialog/dialog_background.png" type="Texture" id=5]
[ext_resource path="res://assets/interface/keys_controller/e.png" type="Texture" id=6]

[sub_resource type="DynamicFont" id=1]
size = 7
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=9]
size = 5
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=6]
size = 8
extra_spacing_top = -1
font_data = ExtResource( 2 )

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "hide_container"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=8]
resource_name = "show_buttons"
length = 0.5

[sub_resource type="Animation" id=3]
resource_name = "show_container"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="DialogContainer" type="Control"]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 1 )
timer_cooldown = 0.02

[node name="ContainerBackground" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -90.0
margin_top = -66.0
margin_right = 130.0
margin_bottom = -6.0
texture = ExtResource( 5 )

[node name="Name" type="Label" parent="ContainerBackground"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -230.0
margin_top = -10.0
margin_right = -160.0
margin_bottom = 5.0
rect_min_size = Vector2( 70, 0 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 1
custom_fonts/font = SubResource( 1 )
text = "Marujo"
align = 2
valign = 1

[node name="Portrait" type="TextureRect" parent="ContainerBackground"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = -56.0
margin_top = -43.0
margin_right = 8.0
margin_bottom = 15.0
rect_scale = Vector2( 1.2, 1.2 )
texture = ExtResource( 3 )
expand = true

[node name="Text" type="RichTextLabel" parent="ContainerBackground"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -90.0
margin_top = -19.0
margin_right = 108.0
margin_bottom = 17.0
rect_scale = Vector2( 1.2, 1.2 )
custom_fonts/normal_font = SubResource( 9 )
text = "
Hello Adventurer! What do you want to buy?"

[node name="ButtonsContainer" type="HBoxContainer" parent="ContainerBackground"]
modulate = Color( 1, 1, 1, 0 )
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -62.0
margin_top = -34.0
margin_right = -18.0
margin_bottom = -14.0
mouse_filter = 2

[node name="LeftButton" type="TextureButton" parent="ContainerBackground/ButtonsContainer"]
margin_right = 20.0
margin_bottom = 20.0
texture_normal = ExtResource( 4 )

[node name="Text" type="Label" parent="ContainerBackground/ButtonsContainer/LeftButton"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -11.0
margin_top = -6.0
margin_right = 12.0
margin_bottom = 8.0
custom_fonts/font = SubResource( 6 )
text = "Buy"
align = 1
valign = 1

[node name="RightButton" type="TextureButton" parent="ContainerBackground/ButtonsContainer"]
margin_left = 24.0
margin_right = 44.0
margin_bottom = 20.0
texture_normal = ExtResource( 4 )

[node name="Text" type="Label" parent="ContainerBackground/ButtonsContainer/RightButton"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -11.0
margin_top = -6.0
margin_right = 12.0
margin_bottom = 8.0
custom_fonts/font = SubResource( 6 )
text = "Sell"
align = 1
valign = 1

[node name="Animation" type="AnimationPlayer" parent="."]
autoplay = "show_container"
anims/RESET = SubResource( 4 )
anims/hide_container = SubResource( 5 )
anims/show_buttons = SubResource( 8 )
anims/show_container = SubResource( 3 )

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="pass" type="TouchScreenButton" parent="."]
position = Vector2( 270, 154 )
scale = Vector2( 0.666667, 0.6875 )
z_index = -1
normal = ExtResource( 6 )
action = "interact"
